; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_socreate_delegate.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/kern/extr_uipc_socket.c_socreate_delegate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.proc = type { i32 }
%struct.socket = type { i32 }

@PROC_NULL = common dso_local global %struct.proc* null, align 8
@ESRCH = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @socreate_delegate(i32 %0, %struct.socket** %1, i32 %2, i32 %3, i64 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.socket**, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.proc*, align 8
  store i32 %0, i32* %6, align 4
  store %struct.socket** %1, %struct.socket*** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  store i32 0, i32* %11, align 4
  %13 = load %struct.proc*, %struct.proc** @PROC_NULL, align 8
  store %struct.proc* %13, %struct.proc** %12, align 8
  %14 = call i64 (...) @proc_selfpid()
  %15 = load i64, i64* %10, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %24

17:                                               ; preds = %5
  %18 = load i64, i64* %10, align 8
  %19 = call %struct.proc* @proc_find(i64 %18)
  store %struct.proc* %19, %struct.proc** %12, align 8
  %20 = load %struct.proc*, %struct.proc** @PROC_NULL, align 8
  %21 = icmp eq %struct.proc* %19, %20
  br i1 %21, label %22, label %24

22:                                               ; preds = %17
  %23 = load i32, i32* @ESRCH, align 4
  store i32 %23, i32* %11, align 4
  br label %32

24:                                               ; preds = %17, %5
  %25 = load i32, i32* %6, align 4
  %26 = load %struct.socket**, %struct.socket*** %7, align 8
  %27 = load i32, i32* %8, align 4
  %28 = load i32, i32* %9, align 4
  %29 = call i32 (...) @current_proc()
  %30 = load %struct.proc*, %struct.proc** %12, align 8
  %31 = call i32 @socreate_internal(i32 %25, %struct.socket** %26, i32 %27, i32 %28, i32 %29, i32 0, %struct.proc* %30)
  store i32 %31, i32* %11, align 4
  br label %32

32:                                               ; preds = %24, %22
  %33 = load %struct.proc*, %struct.proc** %12, align 8
  %34 = load %struct.proc*, %struct.proc** @PROC_NULL, align 8
  %35 = icmp ne %struct.proc* %33, %34
  br i1 %35, label %36, label %39

36:                                               ; preds = %32
  %37 = load %struct.proc*, %struct.proc** %12, align 8
  %38 = call i32 @proc_rele(%struct.proc* %37)
  br label %39

39:                                               ; preds = %36, %32
  %40 = load i32, i32* %11, align 4
  ret i32 %40
}

declare dso_local i64 @proc_selfpid(...) #1

declare dso_local %struct.proc* @proc_find(i64) #1

declare dso_local i32 @socreate_internal(i32, %struct.socket**, i32, i32, i32, i32, %struct.proc*) #1

declare dso_local i32 @current_proc(...) #1

declare dso_local i32 @proc_rele(%struct.proc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
